# cppbuildtemplate

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py  run_tests.sh
.github/workflows/: main.yml
env/: Dockerfile
include/src_lib/: file1.h
src/: CMakeLists.txt
src/folder1/: file2.h
test/: CMakeLists.txt  test.cpp
